放醫療政策圖表

--- a/policies/medical-policy.html.slim
+++ b/policies/medical-policy.html.slim
@@ -51,7 +51,10 @@
 
         p.animation.fade-in 從1996年至2013年的17年間，公部門醫療保健支出占整體醫療保健支出的比重下降了5.8%，家庭自付費用占醫療保健支出比率上升了9.4%。同期間，民間醫療保健資本支出年增加率達8.0%，政府部門僅為2%。但由於若干醫療項目具有強烈的外部性（externality），個人（或個別群體）行為，將影響到全體國民的安全（如防疫、傳染病防治等），是以公部門醫療保健支出應適宜成長。
 
-        p 圖表待補！！！！！！
+        .figure
+          h4.section-sub-title 國民醫療保建收入來源比重：家庭比起政府
+          .medical-source-chart
+          p.text-center 資料來源：衛生福利部 <a href="http://www.mohw.gov.tw/cht/DOS/DM1_P.aspx?f_list_no=557&amp;fod_list_no=365&doc_no=48453" target="_blank">國民醫療保健支出</a>（2013年）
 
         p.animation.fade-in 我國的全民醫療照顧是透過社會保險制度來推行，是以民眾須按時繳納保險費，若有欠費發生，則會被「鎖卡」而造成就醫障礙。健保欠費弱勢民眾大抵維持在70萬人左右，主管單位雖藉由各種舒緩方案，如保費補助、欠費協助等社會救助方式篩選不鎖卡對象，但彼等須提供相關證明以符解卡條件，而保險人亦需耗費大量人力查核，社會成本龐大，然仍有不少民眾未符解卡條件而不能立即就醫。
 
@@ -59,7 +62,10 @@
 
         p.animation.fade-in 此外，病人與醫事人員雙方的認知落差，導致醫病關係緊張、醫療糾紛增加，而欠缺有效率且可被信任的醫療爭議處理機制，更進一步惡化醫病關係。
 
-        p 圖表待補！！！！！！
+        .figure
+          h4.section-sub-title 醫事審議委員會歷年受委託鑑定件數
+          .medical-dispute-chart
+          p.text-center 資料來源：衛生福利部 <a href="http://www.mohw.gov.tw/MOHW_Upload/doc/1011108%E8%A1%9B%E7%92%B0%E5%A7%94%E5%93%A1%E6%9C%83%E5%B0%88%E6%A1%88%E5%A0%B1%E5%91%8A.pdf" target="_blank">醫療糾紛處理及醫療事故補償之現況、問題與對策暨改善作法之專案報告</a>（2012年）
 
   .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 目標
@@ -73,201 +79,79 @@
         ol.text-content.order-list.multi-col-content
           .multi-col-content-inner
             li.col-2-content.animation.fade-in
-              p 推動健康促進，深化國民保健意識，鼓勵休閒運動產業與活力老化。
+              h4.section-sub-title 推動健康促進，深化國民保健意識，鼓勵休閒運動產業與活力老化。
             li.col-2-content.animation.fade-in
-              p 提高公部門醫療保健支出，以保障國民健康。
+              h4.section-sub-title 提高公部門醫療保健支出，以保障國民健康。
             li.col-2-content.animation.fade-in
-              p 打造社區健康照護管理中心，建構在地健康照護網絡，提升社區醫療照護質量。
+              h4.section-sub-title 打造社區健康照護管理中心，建構在地健康照護網絡，提升社區醫療照護質量。
             li.col-2-content.animation.fade-in
-              p 進行醫療體系水平與垂直整合，推動「從社區到醫院」的連續性全人照護健康體系，以因應高齡社會。
+              h4.section-sub-title 進行醫療體系水平與垂直整合，推動「從社區到醫院」的連續性全人照護健康體系，以因應高齡社會。
             li.col-2-content.animation.fade-in
-              p 建構整合型的慢性病預防策略，減少長期照護需求。
+              h4.section-sub-title 建構整合型的慢性病預防策略，減少長期照護需求。
             li.col-2-content.animation.fade-in
-              p 保障醫事人員勞動條件，並確保病人安全。
+              h4.section-sub-title 保障醫事人員勞動條件，並確保病人安全。
             li.col-2-content.animation.fade-in
-              p 健保費之徵收以綜合所得稅申報戶為計費單位，依固定比率費率就源扣繳，以實現公平正義。
+              h4.section-sub-title 健保費之徵收以綜合所得稅申報戶為計費單位，依固定比率費率就源扣繳，以實現公平正義。
             li.col-2-content.animation.fade-in
-              p 保障弱勢民眾就醫權益，凡符合健保資格者，皆可憑證就醫。
+              h4.section-sub-title 保障弱勢民眾就醫權益，凡符合健保資格者，皆可憑證就醫。
 
   .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 政策
 
   .section.white-block
-    blockquote.bigtext.animation.slide-up: p 我知道，文化，是一個國家的靈魂；也深刻地體認到，要改變台灣，文化將是轉型的重要關鍵。
+    blockquote.bigtext.animation.slide-up: p 台灣的未來，即將面對許多許多問題與挑戰；醫療相關的問題，也是千頭萬緒。但要解決這些問題，最重要的，就是領導人必須願意去面對問題，而政府要有強大的溝通能力。我承諾大家，我領導的下一任政府，會是一個最會溝通的政府。這些困難，我會一一來解決。
     .blockquote-name: span 蔡英文
 
   .section
     .center-content
       .text-content
-        h3.section-title 由下而上的文化治理，建構創作自由支持體系
-        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_1.jpg"
-        p.text-center <strong>翻轉政府角色，下放資源分配的權力，回歸專業治理，並引入參與式機制，建構藝術發展的支持體系。</strong>
+        img.image.animation.fade-in src="/images/policies_image/medical_policy/medic_1.jpg"
         ul.todo-list
           li.animation.fade-in
-            h4.section-sub-title 全面改革獎補助體系，行政法人完備化，落實專業治理
-            p 我們要將一般性藝文獎補助，由行政權體系獨攬逐步過渡到由專業行政法人來統籌。政府將推動國家藝術基金會、國家電影中心、流行音樂中心等既有受政府捐助的財團法人或擬新設立之單位，朝向行政法人化方向發展，完備獎補助中介機制，讓文化治理與藝術創作不因行政體制而受限，回歸專業與創意。
-            p 政府的角色在於建立資源分配的上位規範，藉由行政法人引入參與式治理，避免權力集中，對於實質運作則保持「臂距原則」，不介入創作內容。
+            h4.section-sub-title 政府醫療保健支出合理成長，成長率不得低於GDP成長率
+            p 隨GDP成長率調整相關部門預算，但成長經費應適當分配至公共醫療體系、基層公衛人力、預防保健、緊急醫療、防疫、社區復健、及弱勢族群健康等項目，以增進基層照顧功能和品質。
           li.animation.fade-in
-            h4.section-sub-title 活化專業藝文場館，導入藝術總監等專業治理體系，深耕廣被藝術環境，並縮減資源落差
-            p 許多文化場館長期淪為活動中心，而真正專業的各類型藝文中心、影像中心、資料館與博物館卻顯不足。
-            p 為了促進各類型藝術升級，文化設施管理、藝文活動，應邁向專業主導，可藉由藝術與策展總監等專業治理模式，來彰顯地方文化特色，促使藝術深耕在地。而透過藝文中心、資料館與博物館等各類型藝文場館的聯合運作，讓藝術生產與文化累積相互配合，並與國際直接進行交流，成為在地文化的領頭羊。
+            h4.section-sub-title 推動健康促進，鼓勵民間參與，發展休閒產業
+            p 以法規制度強化對國民健康的維護是最具成本效益的健康促進策略，透過訂定專法以規範或減少不健康飲食的供給（例如稅捐或價格介入），保障健康飲食的選擇機會（例如補助或補貼措施），確保飲食與營養資訊的透明化，同時制度性地推動飲食與營養教育，營造正向健康的飲食文化。
+            p 在社區中導入營養衛生教育，從設置社區營養衛生教育示範點做起。示範點計畫首要能充實社區營養的專業人力，鼓勵營養師走入社區，與衛生所、基層醫療和社區組織結盟，並連結社區的健康促進或慢性病預防的各類相關計畫。
+            p 同時，鼓勵民眾參與，加強自我照護或健康管理。創建健康回饋金機制，鼓勵民眾進行慢性病篩檢，將長期投入後，早期發現、早期治療而節省的醫療費用等支出而獲得的淨回報，提早於篩檢行為完成時，回饋給參與者。以明確有效的誘因，改變民眾的預防行為。
+            p 此外，獎勵民間發展休閒運動產業，將觀光休閒與健康促進進行整合，一方面促進產業發展，一方面促進民眾健康。並積極、全面推動活力老化，提升國民健康水準、壓縮疾病期間、降低醫療照護成本。
           li.animation.fade-in
-            h4.section-sub-title 政府提供庇護支持青年、新生及萌芽中的文化創造
-            p 對於較成熟的藝文創作，政府資源的投入應該尊重專業社群的意見，而對於新世代、新生、尚在發展或具有世代傳承性的創作種類與創作者，政府有責任提供庇護，讓其遠離市場與政治力的干擾，策略性地提供養成所需的支持。並鼓勵企業扶持青年藝術家。
+            h4.section-sub-title 建立以病人為中心的醫療體系，合理化醫療服務價格與分配
+            p 家庭責任醫師體系應健全化，以保障民眾都可接受到家庭責任醫師所提供之可近、全人與持續性之醫療保健服務，並改善偏遠地區及重症醫療品質與極重症第一線照護。此外，醫療機構間亦須進行垂直整合。
+            p 合理化醫療服務價格，且確保此服務價格能合理回饋至醫事人員，是提高與維繫醫療品質的重要關鍵，此應從整體健保支付制度的改革做起。偏遠地區、公醫體系和具有特殊醫療性質的服務，應強化公務預算來支撐其營運，以確保城鄉、公私醫療體系間具有齊一醫療品質。
           li.animation.fade-in
-            h4.section-sub-title 就藝術人才之養成與就業進行總檢討，擬定整體人才政策
-            p 我們將聯合文化部、教育部、勞動部對於各個藝術相關領域進行普查，建立藝文人才庫，並從學校教育、專業證照、政府人事晉用、勞動條件與職業訓練等機制著手，進行藝術人才養成的總檢討，以擬定整體人才政策。我們也將協助藝文機構發展創新中心，為年輕藝術人才搭建舞台，提供媒合機會。
+            h4.section-sub-title 強化公共醫療體系，將衛生所轉型為「社區健康照護管理中心」
+            p 透過衛生所的轉型與強化為「社區健康照護管理中心」，讓臺灣老人都能擁有專屬的健康照護管理團隊。其主要任務有三：第一，在地健康照護資源的盤點、轉介與連結。第二，進行社區高齡者的「健康照護管理」，針對每一個高齡民眾進行周全性健康需求評估與照護管理。第三，提供預防性健康服務以及在地、即時、便利的醫療服務，同時提供24小時健康照護諮詢。強化社區為基礎的健康照護能力，建立連續性的全人照護模式，重建社區健康照護體系質量與信任。
+            p 「社區健康照護管理中心」也將成為整合醫療與長期照護資源的社區平臺。對於行動不便的老人、失能者，社區照護團隊能夠就近進行第一線的整合式評估與照護資源的整體規劃與執行。結合目前全民健保所涵蓋的居家護理、藥事服務等，進一步推動「居家醫療照護」（日本稱為「在宅醫療」），讓健康照護人員能夠直接到行動不便的長者家中提供更周全的服務；並延伸至在宅安寧療護。
+            p 全民健康保險應針對「社區健康照護管理中心」，發展相應的創新給付模式，並於發展階段輔以適當公務預算，並制定共同照護模式準則與資訊系統，確保民眾在第一線的照護品質，並大幅提升醫療體系的效率。
           li.animation.fade-in
-            h4.section-sub-title 引入參與式治理，擴大公共課責
-            p 國家文化民主化的推展，不只是政府的責任，要讓地方社區、公眾社群都能參與文化的生成、維護、管理與應用，才能讓文化真正在公民社會中發酵。因此，我們要藉由建構各類型公共參與機制，來擴大文化保護與發展的公民參與及責任。
+            h4.section-sub-title 強化各縣市健康照護資源的整合與協調，提供轉診與照護資源的轉介
+            p 在地健康照護網絡的建立需要醫療院所之間的協調合作，其一方面有賴公開、透明而有效的整合機制，另一方面則應依照地方條件與需求，發展適合在地的照護網絡。
+            p 強化各地「社區健康照護管理中心」、衛生福利部立醫院與縣市衛生局的協調合作，有效發揮「醫療網」的功能。透過中央與地方的合作，加強各縣市健康照護資源的垂直與水平整合，連結「社區健康照護管理中心」和各縣市內、區域間的各級醫療院所以及長期照護資源，有效建立地方照護網絡，落實地方照護資源的協調，提升民眾照護的品質與效率。
+            p 地方整合性照護網絡的建立，將成為「社區健康照護管理中心」的後援，協調適當轉介與後送的醫療與社會照護資源，並建立相互之間的共同照護資訊平臺。未來民眾不再需要重複就醫、評估與檢查，不再需要自行轉診、找關係求診住院，或者焦慮地在複雜的照護市場中尋覓。
           li.animation.fade-in
-            h4.section-sub-title 厚植歷史素材與創意養分
-            p 文化部與各縣市文化局均需擬定文化資產保存的中長程計畫及年度計畫，並將計畫內容包含經費配置，公告於網站上。而計畫擬定過程應邀請相關文化社群、文史工作者、或社區居民代表參與。
-            p 透過多元文化資產保存來接納台灣歷史為我們共同的過去經歷；瞭解與欣賞現今多元族群文化與各地區的不同文化特色，廣納各國文化並與之對話，以促進群落交錯的未來創意。
-            p 透過提升匠師在文資保存修復上的地位、調整文化資產指定登錄制度等措施，來活化台灣多元文化的「有形」與「無形」資產。
+            h4.section-sub-title 建構組織性篩檢體系，與社區健康照護體系結合
+            p 導入組織性篩檢體系，建立從登記、通知、服務、轉介、篩檢品質確保到成效評估改善的系統性管理，並重整現有的癌症和慢性病篩檢服務。將篩檢結果與全民健保的疾病管理、論質計酬相銜接扣連，可增強公衛與醫療的連結，落實早期預防的效果。
+            p 為達到慢性病早期預防的效果，必須建立一組健康平均餘命相關指標群，包括：健康平均餘命、疾病負擔、經濟評估，篩檢管理、疾病管理及照護品質等涵蓋結構、過程與結果的指標，以持續監測、評估和改善計畫的成效。
+            p 慢性病治療是一種計畫性、預防性、持續性、以病人為中心的照護，包含慢性病篩檢、疾病管理、衛教和病人自我健康管理，必須與社區健康照護體系結合，引導基層醫療從治療轉向預防。
           li.animation.fade-in
-            h4.section-sub-title 成立高品質的公共文化頻道，強化支持體系
-            p 我國的藝文發展長期因教育、空間、流通和技術的投資不足而受限。因此，我們將從上述各個環節著手，完備台灣的文化支持體系。並建立專業公共文化頻道，對於促進文化藝術的普及化，將扮演重要角色。
-
-  .section.white-block
-    .center-content
-      .text-content
-        h3.section-title 落實文化公民權
-        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_2.jpg"
-        p.text-center <strong>推動文化民主化，再造文化治理的行政架構，落實文化公民權，讓所有人能夠更平等地近用文化資源。</strong>
-        ul.todo-list
+            h4.section-sub-title 修正勞動法規，保障醫事人員勞動權益
+            p 受僱醫師應該受到與勞工等同的權益保障，主管機關勞動部應將醫療保健服務業之受僱醫師取消排除勞基法適用，遏止畸形工時與雇主恣意役使。在現行84-1條責任制的框架之下，採用勞雇雙方約定工時的精神，因應工作與訓練內容彈性調整工作時間。同時，勞基法裡包括休假、女性勞工權益、職災給付的部分亦一體適用。
+            p 為改善護理人員之勞動條件，應推動健保護理費用與護理照護品質連動支付，以確保此服務價格能合理回饋至護理人員。鼓勵醫院經營者重視護理照護人力，讓更多護理人員久任或回流職場，確保病人安全與照護品質。
           li.animation.fade-in
-            h4.section-sub-title 推動文化基本法，建立文化長期施政綱領
-            p 文化基本法的目的，在於對人民文化權利、文化相關法規、政府文化行政目標和文化政策工具，進行上位整合，確保政策的穩定和持續。未來政府將訂定短、中、長期的文化施政綱領，並定期檢討；行政院也必須召開行政院文化會報，並據以審議各部會文化相關施政與經費。另針對「文化影響評估」，我們應該盤點現有行政程序法、環境影響評估法、區域計畫法、都市計畫法等相關法令，使得文化基本法的立法能真正改變台灣文化治理的品質。
+            h4.section-sub-title 強化醫療糾紛處理機制
+            p 完善醫療糾紛處理機制，達到醫生和病人雙贏的目的。建立專業調解先行機制，由受過訓練的法律專業人員與醫療專業者合作，提供當事人公正意見，縮短認知差距，醫療機構和醫事人員並積極進行關懷、調解，以疏導訴訟案源。建立公正可信賴的醫事鑑定制度以及遵守證據法則的偵查、審判活動。民眾有醫療傷害時，能評鑑其傷害的種類，並給予適當的補償，以減少醫病雙方不必要的訴訟。
           li.animation.fade-in
-            h4.section-sub-title 以國家語言發展法，傳承文化多樣性
-            p 聯合國《保護和促進文化表現形式多樣性公約》認為語言是「文化多樣性的基本要素」，《世界文化多樣性宣言》更具體指出，國家應保障語言多元化。作為多元社會，台灣擁有豐富的語言地景。然而，近年人口及住宅普查已顯示出現「母語使用率懸崖」，警示台灣多元語言文化的傳承已瀕臨危機。我們認為，多樣的語言政策，是民主國家整體文化政策的關鍵環節，透過整合專法的訂定，交付文化部專責主管，並於公共廣電資源分配中落實多語政策。我們相信，母語的保存將讓台灣不同族群的歷史與文化，能夠世代傳承，並豐富這塊土地的未來面貌。
+            h4.section-sub-title 全民健保費之徵收應依綜合所得稅申報戶之實際所得徵收
+            p 健保費之徵收應依實際各項所得計收，健保局對所得之認定與國稅局採相同標準。對民眾每次受領一定金額（譬如一萬元）以上之各類所得，按其受領金額，依固定費率就源扣繳之；至結算時，再依綜合所得申報戶總所得（包括每次未達就源扣繳部分），以固定費率及每年應繳總保險費上、下限範圍內，多退少補之。
           li.animation.fade-in
-            h4.section-sub-title 政府各項施政應具備文化思維
-            p 文化政策不只是單一部會的政策，而是一種國家視野，應該透過政府「施政文化化」，在各項施政融入文化視野，並藉由文化與教育、文化與科技、文化與都市計畫等各項政策的整合，從教育、生活環境等各個面向涵養文化力。
+            h4.section-sub-title 廢除健保鎖卡制度以保障弱勢
+            p 符合健保資格者就可憑健保卡就醫，不鎖卡政策雖有可能使欠費現象增加，但目前欠費之各項政府補助措施，則是由全民租稅負擔之增加來支應，兩者結果一致，加強欠費之催收是另一公權力之行使，有如租稅稽徵般，不能因民眾之欠稅而影響其應享有之公民權利。
           li.animation.fade-in
-            h4.section-sub-title 推動「美學體驗時數」的文化教育，從小培養藝文欣賞能力
-            p 針對12年國教不同年齡學生，每學期固定的「美學體驗時數」將列入學習內容，列為課程之一，包括電影、表演藝術、視覺藝術欣賞與文化機構參訪等，並可鼓勵藝術家進駐校園。同時研擬「文化消費帳戶」等政策的可行性，鼓勵民間資源投入，協助縮減文化生活的社經落差。
-          li.animation.fade-in
-            h4.section-sub-title 活化藝文場館，深耕在地文化
-            p 重整國家級及地方文化設施、各類型文化空間，確保從劇場、音樂廳、美術館、博物館、圖書館、文史館，國片映演空間到廟埕、獨立書店、Live house等文化場館與空間的各式需求，都能夠獲得充分滿足。
-            p 導入專業化管理機制，促使學校、社區、及其周邊的文化設施建立合作關係，促進藝術工作深耕在地，成為在地文化的領頭羊。
-            p 針對大型的展演設施，我們將鼓勵跨域合作，打破僵化的行政區管轄概念，強調中央及地方跨縣市間「資源共享、計畫共行」，以擴大服務對象，並為大型展演設施的經營，提供較為穩固的基礎。
-          li.animation.fade-in
-            h4.section-sub-title 落實垂直式公平的文化平權
-            p 文化生活是人民的基本權利，國家必須積極確保人民的「文化近用」，不會因為身份、年齡、性別、地域、族群、身心障礙等原因產生落差。而文化平權並非齊頭式公平，應該做到「垂直式公平」，也就是起始條件相對弱勢者，政府會給予更多系統性支持，以達文化近用的實質平權。為此，我們會建立文化平權衡量指標，致力弭平各式落差。
-          li.animation.fade-in
-            h4.section-sub-title 保障不同族群與社群的文化論述與詮釋權
-            p 我們要讓所有族群、不同社群與世代的文化走向自由、平權，讓所有台灣人民可以在一個真正意志自由的環境中，敘說故事、創作藝術、展現文化。我們鼓勵撰寫村史紀錄，自己在地的故事自己寫，讓後代子孫了解自己的家鄉。我們支持網路獨立媒體發展，輔助服務新移民及移工之媒體。
-
-  .section
-    .center-content
-      .text-content
-        h3.section-title 重建和再現土地與人民的共同記憶，確保文化多樣性
-        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_3.jpg"
-        p.text-center <strong>揚棄對文化的獨斷詮釋，重建與再現人民與土地的共同記憶，讓多元文化相互對話激盪。</strong>
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 以「有形文化資產空間治理」 作為重大公共建設投資計畫
-            p 我們將以「再造歷史現場」做為「重大公共建設投資計畫」，利用文化建設投資產生的契機，改變台灣文化資產保存捉襟見肘的處境。再造歷史現場，包括「有形文化資產的空間治理」，以及「非物質文化資產再生」。
-            p 「有形文化資產的空間治理」，不僅只是文資的保存、維護與活化，更需要透過對文化資產和外沿區域的統籌規劃，在生活裡再現歷史價值與文化意義。例如建立歷史文化街區與聚落經營機制、推動指標性歷史景觀重現、推動以生活景觀帶動台灣建築等行動，讓文化資產與城鄉發展結合，並透過公民參與，促進社會的相互對話，形塑社會凝聚力。
-          li.animation.fade-in
-            h4.section-sub-title 非物質文化資產的保存與再生
-            p 聯合國教科文組織於2003年通過了《保護非物質文化遺產公約》，將非物質文化遺產定義為文化多樣性的重要來源。而台灣的非物質文化遺產，包括由家族或聚落傳承的秘方、技能、工藝及傳統節慶等已面臨式微，因此，我們將積極推動其保存與再生，作為建立深刻文化內涵的基礎。例如推動「南島文化太平洋聯盟」、非物質文化資產的創業培力計畫、非物質文化保存之國家救援計畫、非物質文化遺產公共化計畫等行動，進一步從這些多元內涵的詮釋再生，發展新的時代精神。
-          li.animation.fade-in
-            h4.section-sub-title 推動台灣博物館領航計畫，建構MLA系統機能
-            p 世代記憶的傳承推廣，要有穩定、分級、有系統的組織作為後盾。除了強化文化資產的維護與經營，我們將推動跨部會的「台灣博物館領航計畫」，鼓勵博物館多元化，增加典藏經費，也鼓勵私人博物館百花齊放，以及建立小型、甚至微型的多元博物館空間。
-            p 同時，將現有國家級博物館發展作為各區域與各研究領域的知識中心，提高研究及展示推廣能力，帶動鄰近或同類型公私立博物館，產生文化綜效。我們也將透過「博物館系統」的建立，讓複合式的社區及地方文化空間發展出「MLA」（博物館─圖書館─檔案館）機能，而在區域博物館與大學的協助下，強化其地方文史研究能量，凝聚社區意識。
-          li.animation.fade-in
-            h4.section-sub-title 盤點文化資源，全力推動一源多用
-            p 世代累積的記憶與知識的傳承不能只是被保存展示，而必須要能持續在現代社會中被使用、被思考。我們看得到芬蘭設計大師Alvar Aalto的作品直到今日，依然雋永，也就會想起台灣的工藝先驅顏水龍的創作；當我們聽到愛爾蘭的民謠成為流行音樂的基調，也可能想起台灣原住民動人的八部合音。文化資產、文化資源的再現，就必須要針對文化資產「一源多用」。因此，我們將全面盤點文化資源，讓「一源多用」概念真正落實。
-          li.animation.fade-in
-            h4.section-sub-title 從在地通往國際的台灣文化之路
-            p 我們將規劃許多條主題性的台灣文化之路，這些文化之路不但從過去來到現代也通向未來，使土地和人民的記憶能在其中傳承發揚，文化之路將讓台灣從在地通往世界，向世界展現島嶼的文化魅力，促進台灣文化觀光的發展。
-
-  .section.white-block
-    .center-content
-      .text-content
-        h3.section-title 以在地文化涵養社區生活
-        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_4.jpg"
-        p.text-center <strong>從生活的「所在」推動社會的進步，形塑在地意識，提升公民參與的文化知能與社區文化涵量。</strong>
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 重視以在地知識為主體的「地方學」，建構地方知識學習網絡
-            p 歷史會累積社會發展所必須的寶貴知識，而這些知識又是由人的經驗所構成。因此，以社區為視角的「地方學」，與「文化資產保存」、「博物館」和「學校教育」，構成傳承世代記憶的四個支柱。
-            p 我們主張，結合對文化資產的擴大投資、新科技的運用與社區文化工作者的串聯，擴大對地方學的研究、整理、推廣能量，並整合在地學校、圖書館、區里辦公室、文史工作室、社區組織、藝文空間、書店乃至民宿等公私空間，成為傳播地方學的「文化熱點」，建構可及而有效的「地方知識學習網絡」。
-          li.animation.fade-in
-            h4.section-sub-title 鼓勵青年留鄉與回鄉，營造有利於新血不斷投入社造的環境
-            p 社區營造既然是要從社區這個最小單位，由下而上推動國家社會的轉型，就必須要讓在地居民能集體參與，共同「經營」社區。在這個以「人」為核心的發展策略中，必須要有新一代的投入、地方知識的傳承和社區治理能量的持續提升。「社區營造Next」希望能夠串連各種地方組織與產業，作為在地文化種子的培力教學平臺，並建構一個有利於新血不斷投入社造的環境，讓多樣的社造工作者，能夠在其中推動社區的耕耘及深化。
-          li.animation.fade-in
-            h4.section-sub-title 結合政府、企業、社企等，堅壯化在地社區組織
-            p 社區營造是國家發展的重要戰略，是國家治理的重要夥伴，然而目前社區組織多靠政府補助與個人熱情存續。為了讓社區組織能夠永續經營，政府必須透過媒合民間資源投入、協助結合社會企業，並導入專業專職人員等策略，使社區組織具備足夠能量，成為在地產業、社福醫療、社區安全、人文教育、環保生態、環境景觀、社區照護等網絡的一環。
-          li.animation.fade-in
-            h4.section-sub-title 釋出社區公共空間
-            p 隨著都市化與人口高齡化，社區居民的交流機會逐漸減少，產生了社區認同凝聚不易、互助動能降低等危機；另一方面，從地方知識的傳承、地方產業的發展、在地文藝創作的進行到高齡人口社會性的維持等等，皆需要固定場域來蓄積發散。
-            p 然而，不論對居民、社區工作者或藝文人士，在地文化空間都存在過高的進駐門檻。有鑑於此，我們將打造多元化的社區共享空間，透過社區內文化資產的運用、協調公有資產釋出、鼓勵民間參與、設置社區博物「站」及輔導團隊進駐等作法，以靈活彈性的獎補助規劃、積極主動的跨部會協調和文化熱點路線串接，讓文化在社區深耕。
-
-  .section
-    .center-content
-      .text-content
-        h3.section-title 提升文化經濟的文化內涵
-        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_5.jpg"
-        p.text-center <strong>活絡文化經濟，創造台灣特色，讓文化力帶動台灣文化產業，在劇烈的國際競爭中突圍而出。</strong>
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 文化創意產業政策重新定位，嶄新出發
-            p 從上世紀末的英國開始，文化及創意產業（cultural and creative industries）成為各國國家發展的新策略，民進黨執政時也在2002年以「文化創意產業計畫」，作為國家發展重點計畫，並由經濟部、教育部、文建會、新聞局跨部會推動。然而，繼任的政府混淆了文化活動、文化活動的產業面向（如表演藝術、影視音、出版等產業）及以文化加值產業（如以設計、風格、原創等特色提高經濟活動的附加價格）等三件事，在2010年施行的文創法與目的事業主管機關分別管理下，造成經濟產業尚未升級，便已排擠文化資源的惡果。
-            p 我們認為文創產業政策必須重新定位，改變現行產業別的部會分工，文化部應該回歸文化核心，將相關資源投注在人才的養成與保障、創作的鼓勵與傳承、空間的充足提供等等，並投資於創意的交流與創作成果的流通，有價值才有產值，我們要以提升文化內涵來提振文化產業。曾經引起社會爭議的文創空間，也應該在此原則下，重新成為文化創造的多樣化育成器，並重視中小型組織及青年新興創意。
-          li.animation.fade-in
-            h4.section-sub-title 從流通、科技與人才，振興台灣文化產業
-            p 所有產業都有文化元素，即使是純粹的文化活動也會有其市場面向，而其中較為成熟者，便是電影、電視、音樂、廣播、出版、展演、工藝、視覺藝術等。文化產業是以藝術創作為核心的產品，能將過去的經典重新演繹、刻劃當代社會、勾勒未來想像，承載文化群體於一時一地的價值與風格。
-            p 然而，文化產業面臨來自國內外各種艱鉅挑戰，造成資本投入不足、人才外流、產品多樣性降低、創作特色流失等現象，而原本應該妥善運用公共資源、使文化經濟發揮文化作用的政府，卻因資源配置錯誤，造成環境的乾涸與扭曲。對此，我們將以新思維、新政策來扭轉，並且著重於流通、科技及人才。
-            p 就市場流通而言，我們將協助文化產品找到更多愛用者，比如在學校教育中，納入多樣的文化體驗課程；針對電影，則應發展國片院線。科技的運用，則藉由文化科技相關政策，透過版權的協調、銷售模式的建立與技術的研發，並參考如其他國家數位音樂廳等方式，推動國內表演藝術的數位傳播。
-            p 就文化人才而言，除了重視一般性培養外，應該也需關注就業機會與勞動保障的重要性。由於文化產業就業類型繁多而細膩，無法以統一標準全面適用，導致目前文化工作者的勞動權益缺乏充足保障，技巧傳承、專業證照、就業媒合等各環節亦未完全接軌，未來應由文化部、教育部與勞動部提出整體政策。
-          li.animation.fade-in
-            h4.section-sub-title 建立跨部會文化經濟推動平臺
-            p 社區營造是國家發展的重要戰略，是國家治理的重要夥伴，然而目前社區組織多靠政府補助與個人熱情存續。為了讓社區組織能夠永續經營，政府必須透過媒合民間資源投入、協助結合社會企業，並導入專業專職人員等策略，使社區組織具備足夠能量，成為在地產業、社福醫療、社區安全、人文教育、環保生態、環境景觀、社區照護等網絡的一環。
-          li.animation.fade-in
-            h4.section-sub-title 釋出社區公共空間
-            p 文化產業之外，亦有許多產業是依附文化創作而生或扮演創作的支援角色，比如數位製圖、藝術鑑價或樂器製作等，它們的存在對於創作環境的健全，不可或缺，卻因為主管機關分散在各部會，長期缺乏整合。另一方面，產業既需要以文化加值，以提高產品或服務的附加價值，亦需要在前階段由文化部主管的文化創意端，得到充份支持。因此，我們主張成立文化經濟推動平臺，納入文化部、經濟部、交通部觀光局、內政部營建署與金管會等相關主管機關，由此機制即時商討跨部會分工，並每年提出文化經濟的短中長發展策略，作為發展相關產業政策的基石。
-
-  .section.white-block
-    .center-content
-      .text-content
-        h3.section-title Culture Next開放與創新 ⇨ 新世代、新科技
-        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_6.jpg"
-        p.text-center <strong>全面支持創意及新興的表現形式，並運用數位科技，發展文化新媒介，用開放與創新邁向新世代。</strong>
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 開放資料應用
-            p 包含政策、獎助、辯論、對話、在地特色、地方誌、口述史等大量文化資料的盤點，在尊重著作權的前提下，將資料轉為開放資料格式（.csv、.json），無償提供民眾加值應用，進而呈現在整合串接資料的面板（dashboard）及入口網站（Portal）。這樣的作法將能增進文化近用權、提升民眾的文化資本，同時帶動故事產業的興起。
-          li.animation.fade-in
-            h4.section-sub-title 建構數位文化資產，透過科技展現文化的無限可能
-            p 因應數位載具的變革，應將更多資源投入文化資產的數位化與新媒體呈現。舉凡文學、影像、表演藝術、視覺藝術等不同形式的創作，美術館或博物館的館藏等等皆是文化資產數位化的標的。而包含舞蹈、武術動作的捕捉及數位化，古蹟或歷史現場的重建與再現等等，都可加入更多新型態的多媒體，例如數位串流、虛擬實境來搭配應用，創造更豐富的展現及體驗形式。
-          li.animation.fade-in
-            h4.section-sub-title 新時代文化法規總檢討
-            p 隨著數位匯流、高速網路與虛擬實境等科技的發展，文化創作將有許多讓人興奮的新機會，卻也將面臨眾多全新的挑戰。政府應為藝術家「量身打造」合適的法規，並簡化流程、拆除枷鎖，以讓藝文組織及藝術文化蓬勃發展。我們認為，政府應該要推動文化領域的法規革新，盤點數位化、智慧財產權保障、藝術品鑑價流通、政府採購、文化管理、文化工作者權益保障等相關法令與標準並進行全面檢討。
-          li.animation.fade-in
-            h4.section-sub-title 鼓勵青年創意及新銳藝術
-            p 為改變青年創意工作者欠缺舞臺的困境，我們將盤點公有空間，建置規模不等的共同工作空間、創意實驗室與園區等，讓青年創意得以有討論及實驗的場域。除空間外，未來政府也將透過計畫專員協助、行政支持等等不同管道來誘發優秀的創意。而在藝文補助方面，則將更著重於實驗、前衛、創新的作品，以協助青年世代走上創作生涯的第一哩路，新銳藝術家則得到相當程度的保障，維持作品的原創性。
-
-  .section
-    .center-content
-      .text-content
-        h3.section-title 善用文化軟實力重返國際社會
-        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_7.jpg"
-        p.text-center <strong>以具台灣特色的文化創造與國際連結，運用文化外交讓世界重新認識台灣。</strong>
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 國際合作在地化
-            p 為讓台灣的多元文化得以持續生長，未來將跨部會推動「國際文化島發展計畫」，盤點並釋出大量公有空間，積極爭取與各國相關單位合作建立平台，或在台設立永久性的文化機構，如交流中心、研究中心及博物館等。同時，也善用我們的自由環境，發展台灣成為亞太地區非政府組織的國際總部，讓世界能走進台灣，促成「國際合作在地化」，建立實質的文化外交。
-          li.animation.fade-in
-            h4.section-sub-title 在地文化國際化
-            p 我們將直接以在地面對國際，透過社區深化的方式，培育在地文化的多元性及深度，積極促成在地文化與國際連結，除「旗艦團隊」、「指標性創作者」外，應將尚在發展、充滿潛力的文化工作者推向國際舞台，為國際文化交流注入活水，源源不絕。
-          li.animation.fade-in
-            h4.section-sub-title 強化國際文化行政能力
-            p 目前政府各部門國際文化交流行政體系，是來自原有的國際宣傳部門，然而國際文化交流業務日趨複雜，需要處理的議題日漸繁多，包括外交策略與國際文化經貿等，現有的能量已明顯不足。在要積極推動文化外交的同時，我們應讓具備國際關係或國際經貿能力的人才進入文化行政體系，或文化人才進入外交體系，建立政府體系中全方位「文化外交」人才的養成與晉用制度。
-
+            h4.section-sub-title  籌建國家級「高齡健康與照護研究中心」，發展高齡社會相關醫療政策與照護模式的創新
+            p 高齡化的挑戰，直接威脅著健康照護體系的財務永續、照護品質以及效率等關鍵課題。其中最為核心的任務，在於扭轉照護輸送模式，發展創新服務與政策。以高齡政策發展具有豐碩成果的日本為例，其於2004年成立「國立高齡醫學與老人學中心」（National Center for Geriatrics and Gerontology）， 透過地區醫院的轉型，結合醫院、政策與社會科學研究部門，作為創新照護服務模式發展的基地，除了進行高齡醫學的研究，也以創新的照護模式提供健康照護、教學等。
+            p 這除了需要投入適當的研發資源，也需要透過不同部門之間的整合合作才可能推動。因此，透過籌建國家級的「高齡健康與照護研究中心」，結合臨床、社區與政策研究，展開跨學科與跨部門的研發、創新服務，將成為帶動未來醫療再生的動能。
 
   .post
     .post-share
