--- a/sass/page/policies-page/_chartstyle.sass
+++ b/sass/page/policies-page/_chartstyle.sass
@@ -73,7 +73,7 @@
     &.numbers
       font-size: 60px
 
-.health-care-spending-chart, .sport-15aDay-mortality-chart
+.health-care-spending-chart, .sport-15aDay-mortality-chart, .medical-source-chart, .medical-dispute-chart
 
   text
     font-size: 18px
