台灣好政頁面改字，重覆的勞動>>食安

--- a/policies/index.html.slim
+++ b/policies/index.html.slim
@@ -420,8 +420,8 @@
 
     .section-item
       .section-header
-        h3.headline 勞動
-        .description.auto-break-text 在資本主義市場經濟民主社會裡，勞動不只是一種勞工獲得薪資報酬的途徑，也是一種社會參與和認同的機制。因此，勞工不應該只是被當成經濟生產要素之一來對待，而應該被以一個完整的人，一位社會公民來對待。
+        h3.headline 食安
+        .description.auto-break-text 食安管理的重點在於「安全」這兩個字，現代政府的責任，已經不只是要讓民眾「有得吃」而已，而是要建立從農場到餐桌的安全體系，讓民眾「吃得安心又安全」。
       .section-content
         .section-content-col2
           .col.topic
