--- a/partial/_countdown.html.slim
+++ b/partial/_countdown.html.slim
@@ -8,4 +8,5 @@
       .countdown-content
         .word 距離投票日還有
         .countdown
-        .word 請一定要出來投票，我們一起點亮台灣、讓國會過半
+        .word 請一定要出來投票，<span>我們一起點亮台灣、讓國會過半</span>
+        a.btn.btn_primary 告訴大家 1/16 出來投票
