--- a/sass/page/_policies.sass
+++ b/sass/page/_policies.sass
@@ -36,8 +36,8 @@
 
   .policies-share
     position: absolute
-    right: 0px
-    bottom: 18px
+    left: 0px
+    bottom: -12px
     +adjust-font-size-to(16px)
     color: #999
 
@@ -66,7 +66,7 @@
   .section-item
     +pie-clearfix
     +padding-leader(1)
-    +padding-trailer(.5)
+    +padding-trailer(1)
 
   .section-header
     border-bottom: solid 1px #ddd
@@ -75,17 +75,19 @@
     +adjust-font-size-to(24px)
     line-height: 32px
     margin-top: 10px
-    +margin-trailer(.5)
+    margin-bottom: 10px
 
   .description
     +adjust-font-size-to(13px)
-    +padding-trailer(.5)
+    line-height: 18px
+    margin-top: -8px
+    padding-bottom: 6px
 
   .title
     margin: 0px
 
   .section-content
-    margin-top: 24px
+    margin-top: 6px
 
   .static
     .col
@@ -108,6 +110,12 @@
       width: 100%
       height: 1px
       background-color: #ddd
+
+    .policies-share
+      left: auto
+      right: 0px
+      top: auto
+      bottom: 18px
 
     .section-headline
       position: relative
@@ -133,16 +141,13 @@
 
     .section-header
       float: left
-      width: 25%
+      width: 30%
       border-bottom: none
 
     .section-content
       float: left
-      width: 75%
+      width: 70%
       margin: 12px 0px 0px 0px
-
-    .headline
-      padding-right: 28px
 
     .description
       padding-right: 40px
@@ -179,6 +184,9 @@
         padding: 0 24px
 
   +at-breakpoint($desktop)
+    // br
+    //   display: block
+
     .section-content-col2
       .topic
         width: 15%
