--- a/_layout.html.slim
+++ b/_layout.html.slim
@@ -4,9 +4,11 @@ html.no-js lang="zh-TW"
     = render "/layout_head"
     = render "/layout_siteinfo"
     = render "/layout_og"
+    / typekit
+    <script>document.documentElement.className += ' wf-loading';</script>
+    <script src="https://use.typekit.net/mqf5nzx.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   body class="#{@page_name}"
-    - if @page_name == "homepage"
-      = render '/partial/countdown'
     .page-outer
       .page
         .page-inner
@@ -16,7 +18,8 @@ html.no-js lang="zh-TW"
           = render "/partial/back-to-top"
         = render "/partial/site-info"
       = render "/partial/footer"
-
+    - if @page_name == "homepage"
+      = render '/partial/countdown'
     = render "/layout_foot"
     - if @page_name == "homepage"
       = render "/layout_countdownjs"
