倒數頁面內容更新

--- a/partial/_countdown.html.slim
+++ b/partial/_countdown.html.slim
@@ -5,8 +5,13 @@
       .close-bar
         .button
         .countinue-to-iing 繼續瀏覽 iing.tw
+      .election-content
+        p.word 珍惜這個歷史時刻，<span>讓我們一起完成，民主光榮的任務。<span>
+        h2.president 總統票 請投<span>蔡英文・陳建仁</span>
+        h2.party 政黨票 請投<span>民主進步黨</span>
       .countdown-content
-        .word 距離投票日還有
+        p.word 距離<span>點亮台灣</span>還有
         .countdown
-        .word 請一定要出來投票，<span>我們一起點亮台灣、讓國會過半</span>
-        a.btn.btn_primary 告訴大家 1/16 出來投票
+      .share-content
+        p.word 請分享提醒親朋好友，<span>1/16 一定要去投票，一起改變台灣！<span>
+        a.btn.btn_primary href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fiing.tw/redirect/" target="_blank" 分享
