--- a/sass/partial/_countdown.sass
+++ b/sass/partial/_countdown.sass
@@ -32,6 +32,7 @@
     max-width: 320px
     width: 100%
     max-height: 480px
+    height: 100%
     height: 100vh
 
     @media screen and (min-width: 320px)
@@ -52,6 +53,7 @@
       position: relative
       z-index: 10
       overflow: hidden
+      height: 100%
       height: calc(100vh - 24px)
       max-height: 456px
       padding: 12px
