--- a/sass/partial/_countdown.sass
+++ b/sass/partial/_countdown.sass
@@ -36,7 +36,7 @@ body.ad-in
     padding: 12px
     max-width: 320px
     width: 100%
-    max-height: 480px
+    max-height: 360px
     height: 100%
     height: 100vh
 
@@ -44,11 +44,11 @@ body.ad-in
       left: 50%
       +translateX(-50%)
 
-    @media screen and (min-height: 568px)
+    @media screen and (min-height: 520px)
       top: 50%
       +translateY(-50%)
 
-    @media screen and (min-width: 320px) and (min-height: 568px)
+    @media screen and (min-width: 320px) and (min-height: 520px)
       left: 50%
       top: 50%
       +translate(-50%, -50%)
@@ -60,7 +60,7 @@ body.ad-in
       overflow: hidden
       height: 100%
       height: calc(100vh - 24px)
-      max-height: 456px
+      max-height: 336px
       padding: 12px
       +background(linear-gradient(135deg, #E7E879, #50B584))
       +border-radius(5px)
@@ -92,7 +92,7 @@ body.ad-in
 
   .countdown-content
     position: absolute
-    bottom: 106px
+    bottom: -24px
     left: -100px
     right: -100px
 
@@ -218,17 +218,18 @@ body.ad-in
       margin: 0 auto
       max-width: 320px
 
+
   +at-breakpoint(760px 8)
     .countdown-lightbox
       padding: 24px
       max-width: 960px
-      min-height: 560px
-      max-height: 588px
+      height: 520px
+      max-height: none
 
       .countdown-lightbox-inner
         padding: 24px
-        min-height: 516px
-        max-height: 540px
+        height: 472px
+        max-height: none
 
     .election-content
       +leader(1.5)
@@ -253,7 +254,7 @@ body.ad-in
             line-height: 54px
 
     .countdown-content
-      bottom: 64px
+      bottom: -42px
 
       .word
         top: 33%
@@ -294,7 +295,7 @@ body.ad-in
 
   +at-breakpoint(1024px 12)
     .countdown-content
-      bottom: 50px
+      bottom: -58px
 
       .word
         +adjust-font-size-to(18px)
@@ -330,7 +331,6 @@ body.ad-in
           .unit
             bottom: 12px
             +adjust-font-size-to(24px)
-
 
       .word
         display: none
