--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1115,18 +1115,18 @@ body.ad-in { overflow: hidden; }
 
 .election-countdown { position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 1000; text-align: center; color: #0f353e; overflow-y: auto; opacity: 0; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s; transition: opacity 0.5s; background-color: rgba(0, 0, 0, 0.7); }
 .election-countdown .mask { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: transparent; }
-.election-countdown .countdown-lightbox { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; margin: auto; padding: 12px; max-width: 320px; width: 100%; max-height: 480px; height: 100%; height: 100vh; }
+.election-countdown .countdown-lightbox { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; margin: auto; padding: 12px; max-width: 320px; width: 100%; max-height: 360px; height: 100%; height: 100vh; }
 @media screen and (min-width: 320px) { .election-countdown .countdown-lightbox { left: 50%; -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); transform: translateX(-50%); } }
-@media screen and (min-height: 568px) { .election-countdown .countdown-lightbox { top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); } }
-@media screen and (min-width: 320px) and (min-height: 568px) { .election-countdown .countdown-lightbox { left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); transform: translate(-50%, -50%); } }
-.election-countdown .countdown-lightbox .countdown-lightbox-inner { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; z-index: 10; overflow: hidden; height: 100%; height: calc(100vh - 24px); max-height: 456px; padding: 12px; background: -webkit-linear-gradient(135deg, #e7e879, #50b584); background: -moz-linear-gradient(135deg, #e7e879, #50b584); background: -o-linear-gradient(135deg, #e7e879, #50b584); background: linear-gradient(135deg, #e7e879, #50b584); -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); }
+@media screen and (min-height: 520px) { .election-countdown .countdown-lightbox { top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); } }
+@media screen and (min-width: 320px) and (min-height: 520px) { .election-countdown .countdown-lightbox { left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); transform: translate(-50%, -50%); } }
+.election-countdown .countdown-lightbox .countdown-lightbox-inner { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; z-index: 10; overflow: hidden; height: 100%; height: calc(100vh - 24px); max-height: 336px; padding: 12px; background: -webkit-linear-gradient(135deg, #e7e879, #50b584); background: -moz-linear-gradient(135deg, #e7e879, #50b584); background: -o-linear-gradient(135deg, #e7e879, #50b584); background: linear-gradient(135deg, #e7e879, #50b584); -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); }
 .election-countdown .close-bar { color: #0f353e; }
 .election-countdown .close-bar:after { content: ""; display: table; clear: both; }
 .election-countdown .close-bar .button { float: left; cursor: pointer; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/countdown-close.png?1452272726'); background-repeat: no-repeat; background-position: 50% 50%; width: 24px; height: 24px; background-image: none, url('/images/countdown-close.svg?1452272726'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; opacity: 0.4; -webkit-transition: opacity 0.25s; -moz-transition: opacity 0.25s; -o-transition: opacity 0.25s; transition: opacity 0.25s; }
 .election-countdown .close-bar .button:hover { opacity: 1; }
 .election-countdown .close-bar .countinue-to-iing { float: right; font-size: 15px; line-height: 24px; cursor: pointer; opacity: 0.4; -webkit-transition: opacity 0.25s; -moz-transition: opacity 0.25s; -o-transition: opacity 0.25s; transition: opacity 0.25s; }
 .election-countdown .close-bar .countinue-to-iing:hover { opacity: 1; }
-.election-countdown .countdown-content { position: absolute; bottom: 106px; left: -100px; right: -100px; }
+.election-countdown .countdown-content { position: absolute; bottom: -24px; left: -100px; right: -100px; }
 .election-countdown .countdown-content .word { position: absolute; z-index: 10; top: -33%; width: 100%; text-align: center; font-size: 12px; line-height: 24px; letter-spacing: 0.4em; }
 .election-countdown .countdown-content .word span { display: inline-block; }
 .election-countdown .countdown-content .countdown .item { display: inline-block; position: relative; opacity: 0.25; padding: 0 6px; margin: 0 6px; }
@@ -1146,14 +1146,14 @@ body.ad-in { overflow: hidden; }
 .election-countdown .share-content .word { display: block; margin-bottom: 12px; font-size: 13px; line-height: 24px; color: rgba(0, 0, 0, 0.6); }
 .election-countdown .share-content .word span { display: inline-block; }
 .election-countdown .share-content .btn { display: block; margin: 0 auto; max-width: 320px; }
-@media (min-width: 760px) { .election-countdown .countdown-lightbox { padding: 24px; max-width: 960px; min-height: 560px; max-height: 588px; }
-  .election-countdown .countdown-lightbox .countdown-lightbox-inner { padding: 24px; min-height: 516px; max-height: 540px; }
+@media (min-width: 760px) { .election-countdown .countdown-lightbox { padding: 24px; max-width: 960px; height: 520px; max-height: none; }
+  .election-countdown .countdown-lightbox .countdown-lightbox-inner { padding: 24px; height: 472px; max-height: none; }
   .election-countdown .election-content { margin-top: 36px; }
   .election-countdown .election-content .word { margin-bottom: 48px; font-size: 16px; line-height: 24px; }
   .election-countdown .election-content .president, .election-countdown .election-content .party { margin-bottom: 18px; font-size: 36px; line-height: 1.1; letter-spacing: 0.1em; }
   .election-countdown .election-content .president span, .election-countdown .election-content .party span { display: inline-block; }
   .election-countdown .election-content .president span:before, .election-countdown .election-content .party span:before { width: 48px; height: 48px; margin: 0 12px; line-height: 54px; }
-  .election-countdown .countdown-content { bottom: 64px; }
+  .election-countdown .countdown-content { bottom: -42px; }
   .election-countdown .countdown-content .word { top: 33%; font-size: 18px; line-height: 24px; letter-spacing: 0.4em; }
   .election-countdown .countdown-content .countdown .item { padding: 0 12px; margin: 0 12px; }
   .election-countdown .countdown-content .countdown .item .number { font-size: 140px; line-height: 144px; }
@@ -1162,7 +1162,7 @@ body.ad-in { overflow: hidden; }
   .election-countdown .share-content { padding: 36px; text-align: left; }
   .election-countdown .share-content .word { float: left; margin-bottom: 0px; font-size: 16px; line-height: 24px; line-height: 36px; }
   .election-countdown .share-content .btn { float: right; padding: 4px 36px; } }
-@media (min-width: 1024px) { .election-countdown .countdown-content { bottom: 50px; }
+@media (min-width: 1024px) { .election-countdown .countdown-content { bottom: -58px; }
   .election-countdown .countdown-content .word { font-size: 18px; line-height: 24px; }
   .election-countdown .countdown-content .countdown .item .number { font-size: 192px; line-height: 216px; }
   .election-countdown .countdown-content .countdown .item .unit { bottom: 40px; font-size: 48px; line-height: 72px; } }
