--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1117,8 +1117,8 @@ body.ad-in { overflow: hidden; }
 .election-countdown .mask { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: transparent; }
 .election-countdown .countdown-lightbox { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; margin: auto; padding: 12px; max-width: 320px; width: 100%; max-height: 360px; height: 100%; height: 100vh; }
 @media screen and (min-width: 320px) { .election-countdown .countdown-lightbox { left: 50%; -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); transform: translateX(-50%); } }
-@media screen and (min-height: 520px) { .election-countdown .countdown-lightbox { top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); } }
-@media screen and (min-width: 320px) and (min-height: 520px) { .election-countdown .countdown-lightbox { left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); transform: translate(-50%, -50%); } }
+@media screen and (min-height: 460px) { .election-countdown .countdown-lightbox { top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); } }
+@media screen and (min-width: 320px) and (min-height: 460px) { .election-countdown .countdown-lightbox { left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); transform: translate(-50%, -50%); } }
 .election-countdown .countdown-lightbox .countdown-lightbox-inner { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; z-index: 10; overflow: hidden; height: 100%; height: calc(100vh - 24px); max-height: 336px; padding: 12px; background: -webkit-linear-gradient(135deg, #e7e879, #50b584); background: -moz-linear-gradient(135deg, #e7e879, #50b584); background: -o-linear-gradient(135deg, #e7e879, #50b584); background: linear-gradient(135deg, #e7e879, #50b584); -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); box-shadow: 0 0 20px rgba(0, 0, 0, 0.75); }
 .election-countdown .close-bar { color: #0f353e; }
 .election-countdown .close-bar:after { content: ""; display: table; clear: both; }
@@ -1146,8 +1146,8 @@ body.ad-in { overflow: hidden; }
 .election-countdown .share-content .word { display: block; margin-bottom: 12px; font-size: 13px; line-height: 24px; color: rgba(0, 0, 0, 0.6); }
 .election-countdown .share-content .word span { display: inline-block; }
 .election-countdown .share-content .btn { display: block; margin: 0 auto; max-width: 320px; }
-@media (min-width: 760px) { .election-countdown .countdown-lightbox { padding: 24px; max-width: 960px; height: 520px; max-height: none; }
-  .election-countdown .countdown-lightbox .countdown-lightbox-inner { padding: 24px; height: 472px; max-height: none; }
+@media (min-width: 760px) { .election-countdown .countdown-lightbox { padding: 24px; max-width: 960px; min-height: 472px; max-height: 500px; height: 100%; }
+  .election-countdown .countdown-lightbox .countdown-lightbox-inner { padding: 24px; height: 424px; max-height: 452px; height: 100%; }
   .election-countdown .election-content { margin-top: 36px; }
   .election-countdown .election-content .word { margin-bottom: 48px; font-size: 16px; line-height: 24px; }
   .election-countdown .election-content .president, .election-countdown .election-content .party { margin-bottom: 18px; font-size: 36px; line-height: 1.1; letter-spacing: 0.1em; }
